syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "chavePix";
option objc_class_prefix = "HLW";

package br.com.zup;

service ChavePixService {

  rpc cadastrar(CadastraChavePixRequest) returns (CadastraChavePixResponse){}

}

enum TipoChavePix {

  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR =2;
  EMAIL =3;
  ALEATORIA = 4;

}

enum TipoDaConta {

  TIPO_DE_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

message CadastraChavePixRequest{
  string clientId = 1;
  TipoChavePix tipoChavePix = 2;
  string chave = 3;
  TipoDaConta  tipoDaConta = 4;
}

message CadastraChavePixResponse{
  string clientId = 1;
  string pixId = 2;
}
