syntax = "proto3";
option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "removerChavePix";
option objc_class_prefix = "HLW";

package br.com.zup;

service RemoveChavePixService{

  rpc remove(RemoveChavePixRequest) returns(RemoveChavePixResponse){}

}

message RemoveChavePixRequest{
  string clientId =1;
  string pixId = 2;
}

message RemoveChavePixResponse{
  string clientId =1;
  string pixId = 2;
}
